--- a/frontend/src/styles.less
+++ b/frontend/src/styles.less
@@ -1,1 +1,17 @@
 @import 'antd/dist/antd.less';
+
+// global override
+.ant-message .anticon {
+    font-size: 1.7rem;
+}
+
+.ant-form-item-explain, .ant-form-item-extra {
+    font-size: 1.3rem;
+    padding-top: 0;
+    transition: color .15s cubic-bezier(0.215, 0.61, 0.355, 1);
+}
+
+.ant-divider-horizontal.ant-divider-with-text {
+    font-size: 1.3rem;
+    border-top-color: rgba(0, 0, 0, .09);
+}
