category create modal and search input

--- a/frontend/src/styles.less
+++ b/frontend/src/styles.less
@@ -14,3 +14,12 @@
     padding-top: 0;
     padding-bottom: 0;
 }
+
+.ant-modal-close-x {
+    font-size: 1.3rem;
+}
+
+.ant-modal-title {
+    font-size: 1.6rem;
+    color: #000;
+}
