product creation categories and subs of parent category

--- a/frontend/src/styles.less
+++ b/frontend/src/styles.less
@@ -31,3 +31,12 @@
 .ant-modal-wrap {
     overflow-x: hidden;
 }
+
+.ant-select-multiple .ant-select-selection-item {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.ant-select-multiple .ant-select-selector {
+    padding: .3rem;
+}
