--- a/frontend/src/styles.less
+++ b/frontend/src/styles.less
@@ -44,3 +44,11 @@
 .ant-card-meta-title {
     font-size: 1.6rem;
 }
+
+.ant-popover-message-title {
+    padding-left: 2rem;
+}
+
+.ant-popover-message > .anticon {
+    top: 8.3px;
+}
