--- a/frontend/src/styles.less
+++ b/frontend/src/styles.less
@@ -52,3 +52,12 @@
 .ant-popover-message > .anticon {
     top: 8.3px;
 }
+
+.ant-layout-sider-zero-width-trigger {
+    background: #059669;
+    color: #f3f3f3;
+    opacity: .7;
+    &:hover {
+        opacity: 1;
+    }
+}
