product page details

--- a/frontend/src/styles.less
+++ b/frontend/src/styles.less
@@ -61,3 +61,17 @@
         opacity: 1;
     }
 }
+
+.ant-carousel .slick-dots li {
+    background-color: #262626;
+}
+
+.ant-carousel .slick-dots li.slick-active button {
+    background-color: #059669;
+}
+
+.ant-tag {
+    &:last-child {
+        margin-right: 0;
+    }
+}
