add side drawer for cart items

--- a/frontend/src/styles.less
+++ b/frontend/src/styles.less
@@ -79,3 +79,12 @@
 .ant-menu-submenu-title {
     padding: 0 1.5rem !important;
 }
+
+.ant-drawer-header {
+    background-color: #059669;
+}
+.ant-drawer-title {
+    font-size: 1.75rem;
+    text-align: center;
+    color: #fff;
+}
